--- a/countries/_posts/2017-07-20-canada.md
+++ b/countries/_posts/2017-07-20-canada.md
@@ -2,7 +2,7 @@
 layout: country
 title: "Canada"
 country: canada
-img: Canada.jpg # Add image post (optional)
+img: CanadaFlagToronto.jpg # Add image post (optional)
 description: You’ll find this post in your `_posts` directory. Go ahead and edit it and re-build the site to see your changes. # Add post description (optional)
 tag: [Travel, Blogging, Mountains]
 ---
