--- a/countries/_posts/2017-07-20-canada.md
+++ b/countries/_posts/2017-07-20-canada.md
@@ -8,4 +8,6 @@ tag: [Travel, Blogging, Mountains]
 ---
 Canada is een "traditioneel" emigratie land voor Europeanen en staat open voor emigranten uit de hele wereld. Behalve uitgebreide mogelijkheden voor gezinsvorming en gezinshereniging voert Canada ook een structureel en overzichtelijk aanmoedigingsbeleid voor kennismigranten.<br/>
 Wilt u nog niet permanent emigreren, maar wel een proefje krijgen van hoe het is om te wonen en werken in Canada? En bent u 18 t/m 30 jaar oud? Dan is het Working Holiday Program de ideale manier om een visum te krijgen waarmee u een jaar lang kunt werken of stage lopen in Canada. Ook geschikt voor jongeren die gewoon op vakantie willen met de mogelijkheid om legaal te werken als en wanneer zij dat willen.<br/>
-Wilt u alleen op vakantie? Dan heeft u een ETA (Electronic Travel Authority) nodig. Daarmee kunt u maximaal 6 maanden in Canada verblijven. Ook hiermee kunnen wij u helpen. Klik hieronder
+Wilt u alleen op vakantie? Dan heeft u een ETA (Electronic Travel Authorization) nodig. Daarmee kunt u maximaal 6 maanden in Canada verblijven. Ook hiermee kunnen wij u helpen.<br/>
+
+<p>Klik hieronder voor meer informatie, of neem *contact* met ons op.<p/>
