update bedrijven en diensten

--- a/countries/_posts/2017-07-20-canada.md
+++ b/countries/_posts/2017-07-20-canada.md
@@ -14,6 +14,6 @@ Wilt u alleen op vakantie? Dan heeft u een ETA (Electronic Travel Authorization)
 
 <p>Bedrijven<br/>
 
-Waar het vaak heel moeilijk is voor particulieren om zomaar een werkvergunning te krijgen, omdat bescherming van de arbeidsmarkt betekent dat staatsburgers en permanente inwoners van een land voorrang krijgen boven "buitenlanders", zijn er wel speciale faciliteiten ter bevordering van internationaal zaken doen. 
+Waar het vaak moeilijk kan zijn voor particulieren om zomaar een werkvergunning te krijgen, omdat bescherming van de arbeidsmarkt betekent dat staatsburgers en permanente inwoners van een land voorrang krijgen boven "buitenlanders", zijn er wel speciale faciliteiten ter bevordering van internationaal zaken doen. Wilt u werknemers uitsturen naar Canada? Klik dan hieronder op "werkvisum voor bedrijven" voor meer informatie, of neem *contact* met ons op.
 
 <p>Klik hieronder voor meer informatie, of neem *contact* met ons op.<p/>
