hoop random veranderingen

--- a/countries/_posts/2017-07-20-canada.md
+++ b/countries/_posts/2017-07-20-canada.md
@@ -12,8 +12,8 @@ Canada is een "traditioneel" emigratie land voor Europeanen en staat open voor e
 Wilt u nog niet permanent emigreren, maar wel een proefje krijgen van hoe het is om te wonen en werken in Canada? En bent u 18 t/m 30 jaar oud? Dan is het Working Holiday Program de ideale manier om een visum te krijgen waarmee u een jaar lang kunt werken of stage lopen in Canada. Ook geschikt voor jongeren die gewoon op vakantie willen met de mogelijkheid om legaal te werken als en wanneer zij dat willen.<br/>
 Wilt u alleen op vakantie? Dan heeft u een ETA (Electronic Travel Authorization) nodig. Daarmee kunt u maximaal 6 maanden in Canada verblijven. Ook hiermee kunnen wij u helpen.<br/>
 
+<p>Kijk hieronder voor meer informatie, of neem *contact* met ons op.<p/>
+
 <p>Bedrijven<br/>
 
 Waar het vaak moeilijk kan zijn voor particulieren om zomaar een werkvergunning te krijgen, omdat bescherming van de arbeidsmarkt betekent dat staatsburgers en permanente inwoners van een land voorrang krijgen boven "buitenlanders", zijn er wel speciale faciliteiten ter bevordering van internationaal zaken doen. Wilt u werknemers uitsturen naar Canada? Klik dan hieronder op "werkvisum voor bedrijven" voor meer informatie, of neem *contact* met ons op.
-
-<p>Klik hieronder voor meer informatie, of neem *contact* met ons op.<p/>
