add country to service metadata and header image

--- a/australie/_posts/2017-07-02-vakantie.md
+++ b/australie/_posts/2017-07-02-vakantie.md
@@ -4,5 +4,7 @@ title: "Vakantie"
 img: CanadaNatureLake.jpg # Add image post (optional)
 description: You’ll find this post in your `_posts` directory. Go ahead and edit it and re-build the site to see your changes. # Add post description (optional)
 tag: [Travel, Blogging, Mountains]
+country: Australië
+
 ---
 <p>Blabla Vakantie blabla<p/>
