add bedrijven page and remove unneeded matadata

--- a/countries/_posts/2017-07-20-canada.md
+++ b/countries/_posts/2017-07-20-canada.md
@@ -3,17 +3,17 @@ layout: country
 title: "Canada"
 country: canada
 img: CanadaFlagToronto.jpg # Add image post (optional)
-description: You’ll find this post in your `_posts` directory. Go ahead and edit it and re-build the site to see your changes. # Add post description (optional)
-tag: [Travel, Blogging, Mountains]
 ---
+
 <p><strong>Particulieren</strong><br/>
 
 Canada is een "traditioneel" emigratie land voor Europeanen en staat open voor emigranten uit de hele wereld. Behalve uitgebreide mogelijkheden voor gezinsvorming en gezinshereniging voert Canada ook een structureel en overzichtelijk aanmoedigingsbeleid voor kennismigranten.<br/>
 Wilt u nog niet permanent emigreren, maar wel een proefje krijgen van hoe het is om te wonen en werken in Canada? En bent u 18 t/m 30 jaar oud? Dan is het Working Holiday Program de ideale manier om een visum te krijgen waarmee u een jaar lang kunt werken of stage lopen in Canada. Ook geschikt voor jongeren die gewoon op vakantie willen met de mogelijkheid om legaal te werken als en wanneer zij dat willen.<br/>
-Wilt u alleen op vakantie? Dan heeft u een ETA (Electronic Travel Authority) nodig. Daarmee kunt u maximaal 6 maanden in Canada verblijven. Ook hiermee kunnen wij u helpen.<br/>
+Wilt u alleen op vakantie? Dan heeft u een ETA (Electronic Travel Authority) nodig. Daarmee kunt u maximaal 6 maanden in Canada verblijven. Ook hiermee kunnen wij u helpen.
+</p>
 
 <p>Kijk hieronder voor meer informatie, of neem *contact* met ons op.<p/>
 
 <p><strong>Bedrijven</strong><br/>
 
-Waar het vaak moeilijk kan zijn voor particulieren om zomaar een werkvergunning te krijgen, omdat bescherming van de arbeidsmarkt betekent dat staatsburgers en permanente inwoners van een land voorrang krijgen boven "buitenlanders", zijn er wel speciale faciliteiten ter bevordering van internationaal zaken doen. Wilt u werknemers uitzenden naar Canada? Klik dan hieronder op "personeel uitzenden" voor meer informatie, of neem *contact* met ons op.
+Waar het vaak moeilijk kan zijn voor particulieren om zomaar een werkvergunning te krijgen, omdat bescherming van de arbeidsmarkt betekent dat staatsburgers en permanente inwoners van een land voorrang krijgen boven "buitenlanders", zijn er wel speciale faciliteiten ter bevordering van internationaal zaken doen. Wilt u werknemers uitzenden naar Canada? Klik dan hieronder op "personeel uitzenden" voor meer informatie, of neem *contact* met ons op.</p>
