--- a/countries/_posts/2017-07-20-canada.md
+++ b/countries/_posts/2017-07-20-canada.md
@@ -12,8 +12,8 @@ Wilt u nog niet permanent emigreren, maar wel een proefje krijgen van hoe het is
 Wilt u alleen op vakantie? Dan heeft u een ETA (Electronic Travel Authority) nodig. Daarmee kunt u maximaal 6 maanden in Canada verblijven. Ook hiermee kunnen wij u helpen.
 </p>
 
-<p>Kijk hieronder voor meer informatie, of neem *contact* met ons op.<p/>
+<p>Kijk hieronder voor meer informatie, of neem <a href="{{ site.baseurl }}/contact">contact</a> met ons op.<p/>
 
 <p><strong>Bedrijven</strong><br/>
 
-Waar het vaak moeilijk kan zijn voor particulieren om zomaar een werkvergunning te krijgen, omdat bescherming van de arbeidsmarkt betekent dat staatsburgers en permanente inwoners van een land voorrang krijgen boven "buitenlanders", zijn er wel speciale faciliteiten ter bevordering van internationaal zaken doen. Wilt u werknemers uitzenden naar Canada? Klik dan hieronder op "personeel uitzenden" voor meer informatie, of neem *contact* met ons op.</p>
+Waar het vaak moeilijk kan zijn voor particulieren om zomaar een werkvergunning te krijgen, omdat bescherming van de arbeidsmarkt betekent dat staatsburgers en permanente inwoners van een land voorrang krijgen boven "buitenlanders", zijn er wel speciale faciliteiten ter bevordering van internationaal zaken doen. Wilt u werknemers uitzenden naar Canada? Klik dan hieronder op "personeel uitzenden" voor meer informatie, of neem <a href="{{ site.baseurl }}/contact">contact</a> met ons op.</p>
