vanalles veranderd aan canada en beetje aan australie

--- a/australie/_posts/2017-07-02-vakantie.md
+++ b/australie/_posts/2017-07-02-vakantie.md
@@ -5,4 +5,11 @@ img: CanadaNatureLake.jpg # Add image post (optional)
 country: Australië
 
 ---
-<p>Blabla Vakantie blabla<p/>
+<p> Als u op vakantie wilt naar Australië, heeft u een toeristenvisum nodig: de ETA (Electronic Travel Authority). Het enige wat u hiervoor nodig
+heeft is de Nederlandse nationaliteit en een Nederlands paspoort. De ETA wordt gekoppeld aan uw paspoort en het is daarom belangrijk dat uw paspoort  gedurende uw gehele verblijf in Australië geldig is. Met een goedgekeurde ETA mag u 3 maanden in Australië verblijven. Het is met een ETA niet toegestaan om te werken, maar u mag wel studeren of een cursus volgen.
+
+<p>Het is verstandig uw ETA niet pas vlak voor vertrek aan te vragen; hoewel de aanvraag meestal snel wordt goedgekeurd, kan deze soms om vershillende redenen vertraging oplopen. Het is belangrijk om een goedgekeurde ETA te hebben voordat u naar Australië afreist omdat u anders het land niet in komt. U kunt de ETA zelf aanvragen. Liever geen stress? Dan kunnen wij de aanvraag natuurlijk ook voor u doen. Neem in dat geval <a href="{{ site.baseurl }}/contact">contact</a> met ons op. </p>
+
+
+<p>Bent u niet ouder 30 jaar en wilt u langer dan 3 maanden in Australië verblijven? Of wilt u de vrijheid hebben om te mogen werken? Dan is een <a href="{{ site.baseurl }}/australie/working-holiday">Working Holiday Visum</a> beter geschikt.
+<p/>
