--- a/canada/_posts/2017-07-02-vakantie.md
+++ b/canada/_posts/2017-07-02-vakantie.md
@@ -7,9 +7,9 @@ tag: [Travel, Blogging, Mountains]
 country: Canada
 
 ---
-<p> Als u op vakantie wilt naar Canada, heeft u een toeristenvisum nodig: de eTA (electronic Travel Authorization). Het enige wat u hiervoor nodig
-heeft is de Nederlandse nationaliteit en een Nederlands paspoort. De eTA wordt gekoppeld aan uw paspoort en is 5 jaar geldig, tenzij uw paspoort voor die tijd verloopt. In dat geval moet een nieuw ETA aangevraagd worden. Met een geldige eTA kunt u over het algemeen zo vaak als u wilt naar Canada reizen, met een maximum van 6 achtereenvolgende maanden per bezoek.
+<p>
+<strong>Toeristenvisum Canada</strong><br/>Als u op vakantie wilt naar Canada, heeft u een toeristenvisum nodig: de eTA (electronic Travel Authorization). Het enige wat u hiervoor nodig
+heeft is de Nederlandse nationaliteit en een Nederlands paspoort. De eTA wordt gekoppeld aan uw paspoort en is 5 jaar geldig, tenzij uw paspoort voor die tijd verloopt. In dat geval moet een nieuwe eTA aangevraagd worden. Met een geldige eTA kunt u over het algemeen zo vaak als u wilt naar Canada reizen, met een maximum van 6 achtereenvolgende maanden per bezoek.
 
-Het is belangrijk om een goedgekeurde eTA te hebben voordat u naar Canada afreist, anders komt u het land niet in. U kunt de eTA zelf aanvragen. Geeft u dit liever uit handen dan kunnen wij dit natuurlijk ook voor u doen. Neem in dat geval <a href="{{ site.baseurl }}/contact">contact</a> met ons op
-
+Het is belangrijk om een goedgekeurde eTA te hebben voordat u naar Canada afreist, anders komt u het land niet in. U kunt de eTA zelf aanvragen. Liever geen stress? Dan kunnen wij de aanvraag natuurlijk ook voor u doen. Neem in dat geval <a href="{{ site.baseurl }}/contact">contact</a> met ons op.
 <p/>
