--- a/newzealand/_posts/2017-07-02-vakantie.md
+++ b/newzealand/_posts/2017-07-02-vakantie.md
@@ -1,7 +1,7 @@
 ---
 layout: service
 title: "Vakantie"
-img: CanadaNatureLake.jpg # Add image post (optional)
+img: newzealand/turquoise-lake.jpg
 country: Australië
 
 ---
