--- a/newzealand/_posts/2017-07-02-vakantie.md
+++ b/newzealand/_posts/2017-07-02-vakantie.md
@@ -2,14 +2,13 @@
 layout: service
 title: "Vakantie"
 img: newzealand/turquoise-lake.jpg
-country: Australië
+country: Nieuw Zeeland
 
 ---
 <p>
-<strong>Toeristenvisum Australië</strong><br/>
-Als u op vakantie wilt naar Australië, heeft u een toeristenvisum nodig: de ETA (Electronic Travel Authority). Dit staat open voor mensen uit de gehele EU en het enige wat u hiervoor nodig heeft is een geldig paspoort. De ETA wordt gekoppeld aan uw paspoort en het is daarom belangrijk dat uw paspoort gedurende uw gehele verblijf in Australië geldig is. Met een goedgekeurde ETA mag u 3 maanden in Australië verblijven. Het is met een ETA niet toegestaan om te werken, maar u mag wel studeren of een cursus volgen.
+<strong>Toeristenvisum Nieuw Zeeland</strong><br/>
+Als u op vakantie wilt naar Nieuw Zeeland, heeft u vanaf 1 oktober 2019 een toeristenvisum nodig: de NZeTA (New Zealand electronic Travel Authority). Dit staat open voor mensen uit de gehele EU en het enige wat u hiervoor nodig heeft is een geldig paspoort. De NZeTA wordt gekoppeld aan uw paspoort en is 2 jaar geldig, tenzij uw paspoort voor die tijd verloopt. In dat geval moet een nieuwe NZeTA aangevraagd worden. Met een geldige NZeTA kunt u meerdere keren naar Nieuw Zeeland reizen, over het algemeen met een maximum van 3 achtereenvolgende maanden per bezoek. Het is met een NZeTA niet toegestaan om te werken.
 
-<p>Het is verstandig uw ETA niet pas vlak voor vertrek aan te vragen; hoewel de aanvraag meestal snel wordt goedgekeurd, kan deze soms om verschillende redenen vertraging oplopen. Het is belangrijk om een goedgekeurde ETA te hebben voordat u naar Australië afreist omdat u anders het land niet binnen mag. U kunt de ETA online zelf aanvragen. Liever geen stress? Dan kunnen wij de aanvraag natuurlijk ook voor u doen. Neem in dat geval <a href="{{ site.baseurl }}/contact">contact</a> met ons op. </p>
+<p>Het is verstandig uw NZeTA niet pas vlak voor vertrek aan te vragen; hoewel de aanvraag meestal binnen 10 minuten wordt goedgekeurd, kan deze soms om verschillende redenen vertraging oplopen waardoor het meerdere dagen kan duren. Het is belangrijk om een goedgekeurde NZeTA te hebben voordat u naar Nieuw Zeeland afreist, anders wordt u vanaf 1 oktober niet meer het land binnen gelaten. U kunt de NZeTA online zelf aanvragen. Liever geen stress? Dan kunnen wij de aanvraag natuurlijk ook voor u doen. Neem in dat geval contact op met ons partnerbedrijf <a href="https://www.visaversa.com/" target="_blank">VisaVersa</a>.
 
-<p>Bent u niet ouder dan 30 jaar en wilt u langer dan 3 maanden in Australië verblijven? Of wilt u de vrijheid hebben om te mogen werken? Dan is het <a href="{{ site.baseurl }}/australie/working-holiday">Working Holiday Visum</a> beter geschikt.
-<p/>
+<p>Bent u niet ouder dan 30 jaar en wilt u langer dan 3 maanden in Nieuw Zeeland verblijven? Of wilt u de vrijheid hebben om te mogen werken? Dan is het <a href="{{ site.baseurl }}/newzealand/working-holiday">Working Holiday Visum</a> beter geschikt.
