--- a/australie/_posts/2017-07-02-vakantie.md
+++ b/australie/_posts/2017-07-02-vakantie.md
@@ -1,7 +1,7 @@
 ---
 layout: service
 title: "Vakantie"
-img: australia/twelve-apostles.jpg # Add image post (optional)
+img: australia/twelve-apostles.jpg
 country: Australië
 
 ---
