--- a/australie/_posts/2017-07-02-vakantie.md
+++ b/australie/_posts/2017-07-02-vakantie.md
@@ -7,9 +7,11 @@ country: Australië
 ---
 <p>
 <strong>Toeristenvisum Australië</strong><br/>
-Als u op vakantie wilt naar Australië, heeft u een toeristenvisum nodig: de ETA (Electronic Travel Authority). Dit staat open voor mensen uit de gehele EU en het enige wat u hiervoor nodig heeft is een geldig paspoort. De ETA wordt gekoppeld aan uw paspoort en het is daarom belangrijk dat uw paspoort gedurende uw gehele verblijf in Australië geldig is. Met een goedgekeurde ETA mag u 3 maanden in Australië verblijven. Het is met een ETA niet toegestaan om te werken, maar u mag wel studeren of een cursus volgen.
+Als u op vakantie wilt naar Australië, heeft u een toeristenvisum nodig. Australië biedt twee soorten toeristenvisums en dit zorgt nogal eens voor verwarring bij mensen. Het meest gebruikte toeristenvisum is de <i>ETA (Electronic Travel Authority)</i>. Dit staat open voor paspoorthouders van veel landen zowel binnen als buiten de EU. Het andere toeristenvisum is het <i>eVisitor visum</i>. Dit visum staat open voor mensen uit landen waarmee de Australische overheid speciale betrekkingen heeft. De meeste landen in de EU vallen hieronder, waaronder Nederland en België. Hoewel beide visums dezelfde geldigheid en voorwaarden bieden voor uw verblijf, is het eVisitor visum een stukje goedkoper. Als u een van de kwalificerende nationailiteiten heeft  is het dus aangeraden om niet een ETA maar een eVisitor visum aan te vragen.
 
-<p>Het is verstandig uw ETA niet pas vlak voor vertrek aan te vragen; hoewel de aanvraag meestal snel wordt goedgekeurd, kan deze soms om verschillende redenen vertraging oplopen. Het is belangrijk om een goedgekeurde ETA te hebben voordat u naar Australië afreist omdat u anders het land niet binnen mag. U kunt de ETA online zelf aanvragen. Liever geen stress? Dan kunnen wij de aanvraag natuurlijk ook voor u doen. Neem in dat geval <a href="{{ site.baseurl }}/contact">contact</a> met ons op. </p>
+Het toeristenvisum dat u aanvraagt wordt gekoppeld aan uw paspoort. Het visum is 12 maanden geldig en u mag per bezoek maximaal 3 maanden in Australie verblijven. Het is niet toegestaan om te werken, maar u mag onder bepaalde voorwaarden wel studeren of een cursus volgen.
+
+<p>Het is verstandig uw ETA of eVisitor visum niet pas vlak voor vertrek aan te vragen; hoewel de aanvraag meestal snel wordt goedgekeurd, kan deze soms om verschillende redenen vertraging oplopen. Het is belangrijk om een goedgekeurd toeristenvisum te hebben voordat u naar Australië afreist omdat u anders het land niet binnen mag. U kunt de aanvraag voor het visum online doen. Weet u niet zeker of u een eVisitor visum of een ETA nodig heeft? Of heeft u liever geen stress vlak voor uw vakantie? Dan kunnen wij de aanvraag natuurlijk ook voor u doen. Neem in dat geval <a href="{{ site.baseurl }}/contact">contact</a> met ons op. </p>
 
 <p>Bent u niet ouder dan 30 jaar en wilt u langer dan 3 maanden in Australië verblijven? Of wilt u de vrijheid hebben om te mogen werken? Dan is het <a href="{{ site.baseurl }}/australie/working-holiday">Working Holiday Visum</a> beter geschikt.
 <p/>
