--- a/verenigdestaten/_posts/2017-07-02-vakantie.md
+++ b/verenigdestaten/_posts/2017-07-02-vakantie.md
@@ -6,9 +6,13 @@ country: Verenigde Staten
 
 ---
 <p>
-<strong>Toeristenvisum Nieuw Zeeland</strong><br/>
-Als u op vakantie wilt naar Nieuw Zeeland, heeft u vanaf 1 oktober 2019 een toeristenvisum nodig: de NZeTA (New Zealand electronic Travel Authority). Dit staat open voor mensen uit de gehele EU en het enige wat u hiervoor nodig heeft is een geldig paspoort. De NZeTA wordt gekoppeld aan uw paspoort en is 2 jaar geldig, tenzij uw paspoort voor die tijd verloopt. In dat geval moet een nieuwe NZeTA aangevraagd worden. Met een geldige NZeTA kunt u meerdere keren naar Nieuw Zeeland reizen, over het algemeen met een maximum van 3 achtereenvolgende maanden per bezoek. Het is met een NZeTA niet toegestaan om te werken.
+<strong>Als toerist naar de VS via het ESTA systeem</strong><br/>
+Als u op vakantie wilt naar de VS voor maximaal 90 dagen, heeft u over het algemeen geen visum nodig, maar u moet wel eerst reistoestemming aanvragen. Dit gaat via het ESTA systeem. De aanvraag moet online worden gedaan, en binnen (normaalgesproken) 72 uur krijgt u te horen of de aanvraag is goedgekeurd. Het is belangrijk de reistoestemming op tijd aan te vragen, want de meeste vliegmaatschappijen zullen u zonder ESTA reistoestemming niet toelaten op uw vlucht. Daarnaast zijn de Verenigde Staten wat strenger in het verlenen van reistoestemming dan veel andere landen, en goedgekeuring hangt af van een aantal factoren. Er zal bijvoorbeeld geen toestemming worden gegeven als u naast uw EU nationaliteit ook de nationaliteit bezit van Iran, Irak, Syrië, Jemen, Sudan, Somalië of Libië. Ook als u niet een van deze nationaliteiten bezit maar wel sinds maart 2011 in een van deze landen bent geweest, zal er geen reistoestemming worden gegeven. Verder zal er ook geen reistoestemming worden verleend als een eerdere visumaanvraag voor de VS is geweigerd, als u ooit langer in de VS bent gebleven dan met uw visum/reistoestemming was toegestaan, of als er sprake is van een arrestatie of veroordeling.
+</p>
 
-<p>Het is verstandig uw NZeTA niet pas vlak voor vertrek aan te vragen; hoewel de aanvraag meestal binnen 10 minuten wordt goedg ekeurd, kan deze soms om verschillende redenen vertraging oplopen waardoor het meerdere dagen kan duren. Het is belangrijk om een goedgekeurde NZeTA te hebben voordat u naar Nieuw Zeeland afreist, anders wordt u vanaf 1 oktober niet meer het land binnen gelaten. U kunt de NZeTA online zelf aanvragen. Liever geen stress? Dan kunnen wij de aanvraag natuurlijk ook voor u doen. Neem in dat geval contact op met ons partnerbedrijf <a href="https://www.visaversa.com/" target="_blank">VisaVersa</a>.
+<p>Het is met een ESTA reistoestemming niet toegestaan om te werken of studeren tijdens uw verblijf in de VS. Wilt u dit wel, dan zult u een werkvisum aan moeten vragen.
+</p>
 
-<p>Bent u niet ouder dan 30 jaar en wilt u langer dan 3 maanden in Nieuw Zeeland verblijven? Of wilt u de vrijheid hebben om te mogen werken? Dan is het <a href="{{ site.baseurl }}/newzealand/working-holiday">Working Holiday Visum</a> beter geschikt.
+<p><strong>Als u niet in aanmerking komt voor een ESTA reistoestemming</strong><br/>
+Als u niet in aanmerking komt voor een ESTA reistoestemming zijn er vaak nog wel andere manieren om een visum te krijgen voor de VS, alleen is de aanvraag dan wat ingewikkelder en zal deze ook een stuk langer duren. Neem daarom <a href="{{ site.baseurl }}/contact">contact</a> met ons op als u geen reistoestemming kunt krijgen via het ESTA systeem. Wij zoeken dan voor u uit wat uwe mogelijkheden zijn.  
+</p>
