--- a/countries/_posts/2017-07-20-canada.md
+++ b/countries/_posts/2017-07-20-canada.md
@@ -2,7 +2,7 @@
 layout: country
 title: "Canada"
 country: canada
-img: CanadaFlagToronto.jpg
+img: countries/CanadaFlagToronto.jpg
 ---
 
 <p><strong>Particulieren</strong><br/>
