--- a/verenigde-staten/_posts/2017-07-02-vakantie.md
+++ b/verenigde-staten/_posts/2017-07-02-vakantie.md
@@ -7,12 +7,15 @@ country: Verenigde Staten
 ---
 <p>
 <strong>Als toerist naar de VS via het ESTA systeem</strong><br/>
-Als u op vakantie wilt naar de VS voor maximaal 90 dagen, heeft u over het algemeen geen visum nodig, maar u moet wel eerst reistoestemming aanvragen. Dit gaat via het ESTA systeem. De aanvraag moet online worden gedaan, en binnen (normaalgesproken) 72 uur krijgt u te horen of de aanvraag is goedgekeurd. Het is belangrijk de reistoestemming op tijd aan te vragen, want de meeste vliegmaatschappijen zullen u zonder ESTA reistoestemming niet toelaten op uw vlucht. Daarnaast zijn de Verenigde Staten wat strenger in het verlenen van reistoestemming dan veel andere landen, en goedgekeuring hangt af van een aantal factoren. Er zal bijvoorbeeld geen toestemming worden gegeven als u naast uw EU nationaliteit ook de nationaliteit bezit van Iran, Irak, Syrië, Jemen, Sudan, Somalië of Libië. Ook als u niet een van deze nationaliteiten bezit maar wel sinds maart 2011 in een van deze landen bent geweest, zal er geen reistoestemming worden gegeven. Verder zal er ook geen reistoestemming worden verleend als een eerdere visumaanvraag voor de VS is geweigerd, als u ooit langer in de VS bent gebleven dan met uw visum/reistoestemming was toegestaan, of als er sprake is van een arrestatie of veroordeling.
+Als u op vakantie wilt naar de VS voor maximaal 90 dagen, heeft u over het algemeen geen visum nodig, maar u moet wel eerst reistoestemming aanvragen. Zelfs als het alleen gaat om een overstap in de VS op weg naar een ander land, is deze reistoestemming vereist. Dit gaat via het ESTA systeem. De aanvraag moet online worden gedaan, en binnen (normaal gesproken) 72 uur krijgt u te horen of de aanvraag is goedgekeurd. Het is belangrijk de reistoestemming op tijd aan te vragen, want de meeste vliegmaatschappijen zullen u zonder ESTA reistoestemming niet toelaten tot uw vlucht. Daarnaast zijn de Verenigde Staten wat strenger in het verlenen van reistoestemming dan veel andere landen, en goedgekeuring hangt af van een aantal factoren. Er zal bijvoorbeeld geen toestemming worden gegeven als u naast uw EU nationaliteit ook de nationaliteit bezit van Iran, Irak, Syrië, Jemen, Sudan, Somalië of Libië. Ook als u niet een van deze nationaliteiten bezit maar wel sinds maart 2011 in een van deze landen bent geweest, zal er geen reistoestemming worden gegeven. Verder zal er ook geen reistoestemming worden verleend als een eerdere visumaanvraag voor de VS is geweigerd, als u ooit langer in de VS bent gebleven dan met uw visum/reistoestemming was toegestaan, of als er sprake is van een arrestatie of veroordeling.
 </p>
 
-<p>Het is met een ESTA reistoestemming niet toegestaan om te werken of studeren tijdens uw verblijf in de VS. Wilt u dit wel, dan zult u een werkvisum aan moeten vragen.
+<p>De ESTA reistoestemming kunt u zelf online aanvragen via de <a href="https://esta.cbp.dhs.gov/esta/application.html?execution=e1s1" target="_blank">officiële website</a> van het Department of Homeland Security. Mocht u dit liever niet zelf doen, dan kunnen wij dit natuurlijk ook voor u doen. Neem dan <a href="{{ site.baseurl }}/contact">contact</a> met ons op.
+</p>
+
+<p>Het is met een ESTA reistoestemming niet toegestaan om te werken of studeren tijdens uw verblijf in de VS. Wilt u dit wel, dan zult u een <a href="{{ site.baseurl }}/verenigde-staten/werkvisum">werkvisum</a> aan moeten vragen.
 </p>
 
 <p><strong>Als u niet in aanmerking komt voor een ESTA reistoestemming</strong><br/>
-Als u niet in aanmerking komt voor een ESTA reistoestemming zijn er vaak nog wel andere manieren om een visum te krijgen voor de VS, alleen is de aanvraag dan wat ingewikkelder en zal deze ook een stuk langer duren. Neem daarom <a href="{{ site.baseurl }}/contact">contact</a> met ons op als u geen reistoestemming kunt krijgen via het ESTA systeem. Wij zoeken dan voor u uit wat uwe mogelijkheden zijn.  
+Als u niet in aanmerking komt voor een ESTA reistoestemming zijn er vaak nog wel andere manieren om een visum te krijgen waarmee u op vakantie kunt naar de VS, alleen is de aanvraag dan wat ingewikkelder en zal deze ook een stuk langer duren. Neem daarom <a href="{{ site.baseurl }}/contact">contact</a> met ons op als u geen reistoestemming kunt krijgen via het ESTA systeem. Wij zoeken dan voor u uit wat uw mogelijkheden zijn en helpen u het juiste visum te verkrijgen.  
 </p>
