add meta descriptions to all pages

--- a/canada/_posts/2017-07-02-vakantie.md
+++ b/canada/_posts/2017-07-02-vakantie.md
@@ -3,7 +3,9 @@ layout: service
 title: "Vakantie"
 img: CanadaNatureLake.jpg
 country: Canada
-
+description: >
+  EAH helpt u bij het verkrijgen van een eTA (electronic Travel Authorization)
+  voor uw vakantie in Canada.
 ---
 <p>
 <strong>Toeristenvisum Canada</strong><br/>Als u op vakantie wilt naar Canada, heeft u een toeristenvisum nodig: de eTA (electronic Travel Authorization). Het enige wat u hiervoor nodig
