--- a/countries/_posts/2017-07-20-canada.md
+++ b/countries/_posts/2017-07-20-canada.md
@@ -3,6 +3,9 @@ layout: country
 title: "Canada"
 country: canada
 img: countries/CanadaNiagaraFalls.jpg
+description: >
+  Heeft u een visum nodig voor Canada? EAH help u op weg! Zowel voor een vakantie visum (eTA),
+  working holiday werkvisume of permanente verblijfsvergunning als u wilt emigreren naar Canada.
 ---
 
 <p><strong>Particulieren</strong><br/>
