--- a/verenigde-staten/_posts/2017-07-02-vakantie.md
+++ b/verenigde-staten/_posts/2017-07-02-vakantie.md
@@ -3,7 +3,9 @@ layout: service
 title: "Vakantie"
 img: verenigdestaten/monument-valley.jpg
 country: Verenigde Staten
-
+description: >
+  Op vakantie naar de VS? EAH helpt u bij het aanvragen van een
+  ESTA zodat u zonder stress uw reis kunt plannen.
 ---
 <p>
 <strong>Als toerist naar de VS via het ESTA systeem</strong><br/>
@@ -17,5 +19,5 @@ Als u op vakantie wilt naar de VS voor maximaal 90 dagen, heeft u over het algem
 </p>
 
 <p><strong>Als u niet in aanmerking komt voor een ESTA reistoestemming</strong><br/>
-Als u niet in aanmerking komt voor een ESTA reistoestemming zijn er vaak nog wel andere manieren om een visum te krijgen waarmee u op vakantie kunt naar de VS, alleen is de aanvraag dan wat ingewikkelder en zal deze ook een stuk langer duren. Neem daarom <a href="{{ site.baseurl }}/contact">contact</a> met ons op als u geen reistoestemming kunt krijgen via het ESTA systeem. Wij zoeken dan voor u uit wat uw mogelijkheden zijn en helpen u het juiste visum te verkrijgen.  
+Als u niet in aanmerking komt voor een ESTA reistoestemming zijn er vaak nog wel andere manieren om een visum te krijgen waarmee u op vakantie kunt naar de VS, alleen is de aanvraag dan wat ingewikkelder en zal deze ook een stuk langer duren. Neem daarom <a href="{{ site.baseurl }}/contact">contact</a> met ons op als u geen reistoestemming kunt krijgen via het ESTA systeem. Wij zoeken dan voor u uit wat uw mogelijkheden zijn en helpen u het juiste visum te verkrijgen.
 </p>
