--- a/nieuw-zeeland/_posts/2017-07-02-vakantie.md
+++ b/nieuw-zeeland/_posts/2017-07-02-vakantie.md
@@ -6,9 +6,9 @@ country: Nieuw Zeeland
 
 ---
 <p>
-<strong>Toeristenvisum Nieuw Zeeland</strong><br/>
-Als u op vakantie wilt naar Nieuw Zeeland, heeft u vanaf 1 oktober 2019 een toeristenvisum nodig: de NZeTA (New Zealand electronic Travel Authority). Dit staat open voor mensen uit de gehele EU en het enige wat u hiervoor nodig heeft is een geldig paspoort. De NZeTA wordt gekoppeld aan uw paspoort en is 2 jaar geldig, tenzij uw paspoort voor die tijd verloopt. In dat geval moet een nieuwe NZeTA aangevraagd worden. Met een geldige NZeTA kunt u meerdere keren naar Nieuw Zeeland reizen, over het algemeen met een maximum van 3 achtereenvolgende maanden per bezoek. Het is met een NZeTA niet toegestaan om te werken.
+<strong>Toeristenvisum Nieuw-Zeeland</strong><br/>
+Als u op vakantie wilt naar Nieuw-Zeeland, heeft u vanaf 1 oktober 2019 een toeristenvisum nodig: de NZeTA (New Zealand electronic Travel Authority). Dit staat open voor mensen uit de gehele EU en het enige wat u hiervoor nodig heeft is een geldig paspoort. De NZeTA wordt gekoppeld aan uw paspoort en is 2 jaar geldig, tenzij uw paspoort voor die tijd verloopt. In dat geval moet een nieuwe NZeTA aangevraagd worden. Met een geldige NZeTA kunt u meerdere keren naar Nieuw Zeeland reizen, over het algemeen met een maximum van 3 achtereenvolgende maanden per bezoek. Het is met een NZeTA niet toegestaan om te werken.
 
-<p>Het is verstandig uw NZeTA niet pas vlak voor vertrek aan te vragen; hoewel de aanvraag meestal binnen 10 minuten wordt goedgekeurd, kan deze soms om verschillende redenen vertraging oplopen waardoor het meerdere dagen kan duren. Het is belangrijk om een goedgekeurde NZeTA te hebben voordat u naar Nieuw Zeeland afreist, anders wordt u vanaf 1 oktober niet meer het land binnen gelaten. U kunt de NZeTA online zelf aanvragen. Liever geen stress? Dan kunnen wij de aanvraag natuurlijk ook voor u doen. Neem in dat geval contact op met ons partnerbedrijf <a href="https://www.visaversa.com/" target="_blank">VisaVersa</a>.
+<p>Het is verstandig uw NZeTA niet pas vlak voor vertrek aan te vragen; hoewel de aanvraag meestal binnen 10 minuten wordt goedgekeurd, kan deze soms om verschillende redenen vertraging oplopen waardoor het meerdere dagen kan duren. Het is belangrijk om een goedgekeurde NZeTA te hebben voordat u naar Nieuw-Zeeland afreist, anders wordt u vanaf 1 oktober niet meer het land binnen gelaten. U kunt de NZeTA online zelf aanvragen. Liever geen stress? Dan kunnen wij de aanvraag natuurlijk ook voor u doen. Neem in dat geval <a href="{{ site.baseurl }}/contact">contact</a> met ons op.
 
-<p>Bent u niet ouder dan 30 jaar en wilt u langer dan 3 maanden in Nieuw Zeeland verblijven? Of wilt u de vrijheid hebben om te mogen werken? Dan is het <a href="{{ site.baseurl }}/newzealand/working-holiday">Working Holiday Visum</a> beter geschikt.
+<p>Bent u niet ouder dan 30 jaar en wilt u langer dan 3 maanden in Nieuw-Zeeland verblijven? Of wilt u de vrijheid hebben om te mogen werken? Dan is het <a href="{{ site.baseurl }}/newzealand/working-holiday">Working Holiday Visum</a> beter geschikt.
