--- a/australie/_posts/2017-07-02-vakantie.md
+++ b/australie/_posts/2017-07-02-vakantie.md
@@ -3,7 +3,9 @@ layout: service
 title: "Vakantie"
 img: australia/twelve-apostles.jpg
 country: Australië
-
+description: >
+  Als u op vakantie gaat naar Australië heeft u een visum nodig. EAH kan u helpen bij het verkrijgen
+  van een ETA of eVisitor toeristen visum.
 ---
 <p>
 <strong>Toeristenvisum Australië</strong><br/>
