links gefixt bitches

--- a/canada/_posts/2017-07-02-vakantie.md
+++ b/canada/_posts/2017-07-02-vakantie.md
@@ -11,5 +11,6 @@ description: >
 <strong>Toeristenvisum Canada</strong><br/>Als u op vakantie wilt naar Canada, heeft u een toeristenvisum nodig: de eTA (electronic Travel Authorization). Het enige wat u hiervoor nodig
 heeft is de Nederlandse nationaliteit en een Nederlands paspoort. De eTA wordt gekoppeld aan uw paspoort en is 5 jaar geldig, tenzij uw paspoort voor die tijd verloopt. In dat geval moet een nieuwe eTA aangevraagd worden. Met een geldige eTA kunt u over het algemeen zo vaak als u wilt naar Canada reizen, met een maximum van 6 achtereenvolgende maanden per bezoek.
 
-Het is belangrijk om een goedgekeurde eTA te hebben voordat u naar Canada afreist, anders komt u het land niet in. U kunt de eTA zelf aanvragen. Liever geen stress? Dan kunnen wij de aanvraag natuurlijk ook voor u doen. Neem in dat geval <a href="{{ site.baseurl }}/contact">contact</a> met ons op.
+Het is belangrijk om een goedgekeurde eTA te hebben voordat u naar Canada afreist, anders komt u het land niet in. U kunt de eTA zelf aanvragen via de <a href="https://www.canada.ca/en/immigration-refugees-citizenship/services/visit-canada/eta/apply.html" target="_blank">officiële website</a> daarvoor.
+Liever geen stress? Dan kunnen wij de aanvraag natuurlijk ook voor u doen. Neem in dat geval <a href="{{ site.baseurl }}/contact">contact</a> met ons op.
 <p/>
