--- a/countries/_posts/2017-07-20-canada.md
+++ b/countries/_posts/2017-07-20-canada.md
@@ -10,17 +10,18 @@ description: >
 
 <p><strong>Particulieren</strong><br/>
 
-Canada is een "traditioneel" emigratie land voor Europeanen en staat open voor emigranten uit de hele wereld. Behalve uitgebreide mogelijkheden voor gezinsvorming en gezinshereniging voert Canada ook een structureel en overzichtelijk aanmoedigingsbeleid voor kennismigranten.</p>
-
-
-<p>Wilt u nog niet permanent emigreren, maar wel een proefje krijgen van hoe het is om te wonen en werken in Canada? En bent u 18 t/m 30 jaar oud? Dan is het Working Holiday Program de ideale manier om een visum te krijgen waarmee u een jaar lang kunt werken of stage lopen in Canada. Ook geschikt voor jongeren die gewoon op vakantie willen met de mogelijkheid om legaal te werken als en wanneer zij dat willen.
+Canada is een "traditioneel" emigratie land voor Europeanen en staat open voor emigranten uit de hele wereld. Behalve uitgebreide mogelijkheden voor gezinsvorming en gezinshereniging voert Canada ook een structureel en overzichtelijk aanmoedigingsbeleid voor kennismigranten. <a href="{{ site.baseurl }}/canada/emigreren-naar-canada">Emigreren</a> naar Canada kan dus via verschillende wegen.
 </p>
 
-<p>Wilt u alleen op vakantie? Dan heeft u een eTA (electronic Travel Authorization) nodig. Daarmee kunt u maximaal 6 maanden in Canada verblijven. Ook hiermee kunnen wij u helpen.
+
+<p>Wilt u nog niet permanent emigreren, maar wel een proefje krijgen van hoe het is om te wonen en werken in Canada? En bent u 18 t/m 30 jaar oud? Dan is het <a href="{{ site.baseurl }}/canada/working-holiday">Working Holiday Program</a> de ideale manier om een visum te krijgen waarmee u een jaar lang kunt werken of stage lopen in Canada. Ook geschikt voor jongeren die gewoon op vakantie willen met de mogelijkheid om legaal te werken als en wanneer zij dat willen.
+</p>
+
+<p>Wilt u alleen op <a href="{{ site.baseurl }}/canada/vakantie">vakantie</a>? Dan heeft u een eTA (electronic Travel Authorization) nodig. Daarmee kunt u maximaal 6 maanden in Canada verblijven. Ook hiermee kunnen wij u helpen.
 </p>
 
 <p>Kijk hieronder voor meer informatie, of neem <a href="{{ site.baseurl }}/contact">contact</a> met ons op.<p/>
 
 <p><strong>Bedrijven</strong><br/>
 
-Waar het vaak moeilijk kan zijn voor particulieren om zomaar een werkvergunning te krijgen, omdat bescherming van de arbeidsmarkt betekent dat staatsburgers en permanente inwoners van een land voorrang krijgen boven "buitenlanders", zijn er wel speciale faciliteiten ter bevordering van internationaal zaken doen. Wilt u werknemers uitzenden naar Canada? Klik dan hieronder op "personeel uitzenden" voor meer informatie, of neem <a href="{{ site.baseurl }}/contact">contact</a> met ons op.</p>
+Waar het vaak moeilijk kan zijn voor particulieren om zomaar een werkvergunning te krijgen, omdat bescherming van de arbeidsmarkt betekent dat staatsburgers en permanente inwoners van een land voorrang krijgen boven "buitenlanders", zijn er wel speciale faciliteiten ter bevordering van internationaal zaken doen. Wilt u <a href="{{ site.baseurl }}/australie/personeel-uitzenden">personeel uitzenden</a> naar Canada? Kijk dan hieronder voor meer informatie, of neem <a href="{{ site.baseurl }}/contact">contact</a> met ons op.</p>
