--- a/australie/_posts/2017-07-02-vakantie.md
+++ b/australie/_posts/2017-07-02-vakantie.md
@@ -2,6 +2,7 @@
 layout: service
 title: "Vakantie"
 img: australia/twelve-apostles.jpg
+tagline: Toeristenvisum voor Australië
 country: Australië
 description: >
   Als u op vakantie gaat naar Australië heeft u een visum nodig. EAH kan u helpen bij het verkrijgen
