--- a/canada/_posts/2017-07-02-vakantie.md
+++ b/canada/_posts/2017-07-02-vakantie.md
@@ -2,6 +2,7 @@
 layout: service
 title: "Vakantie"
 img: CanadaNatureLake.jpg
+tagline: "Toeristenvisum voor Canada"
 country: Canada
 description: >
   EAH helpt u bij het verkrijgen van een eTA (electronic Travel Authorization)
