--- a/nieuw-zeeland/_posts/2017-07-02-vakantie.md
+++ b/nieuw-zeeland/_posts/2017-07-02-vakantie.md
@@ -1,6 +1,7 @@
 ---
 layout: service
 title: "Vakantie"
+tagline: Toeristenvisum voor Nieuw-Zeeland
 img: newzealand/turquoise-lake.jpg
 country: Nieuw-Zeeland
 description: >
