--- a/verenigde-staten/_posts/2017-07-03-vakantie.md
+++ b/verenigde-staten/_posts/2017-07-03-vakantie.md
@@ -1,6 +1,7 @@
 ---
 layout: service
 title: "Vakantie"
+tagline: Toeristenvisum voor Amerika
 img: verenigdestaten/monument-valley.jpg
 country: Verenigde Staten
 description: >
