--- a/countries/_posts/2017-07-20-canada.md
+++ b/countries/_posts/2017-07-20-canada.md
@@ -1,6 +1,7 @@
 ---
 layout: country
 title: "Canada"
+tagline: Visums voor Canada
 country: canada
 img: countries/CanadaNiagaraFalls.jpg
 description: >
