add truckers info

--- a/countries/_posts/2017-07-20-canada.md
+++ b/countries/_posts/2017-07-20-canada.md
@@ -18,6 +18,8 @@ Canada is een "traditioneel" emigratie land voor Europeanen en staat open voor e
 <p>Wilt u nog niet permanent emigreren, maar wel een proefje krijgen van hoe het is om te wonen en werken in Canada? En bent u 18 t/m 30 jaar oud? Dan is het <a href="{{ site.baseurl }}/canada/working-holiday">Working Holiday Program</a> de ideale manier om een visum te krijgen waarmee u een jaar lang kunt werken of stage lopen in Canada. Ook geschikt voor jongeren die gewoon op vakantie willen met de mogelijkheid om legaal te werken als en wanneer zij dat willen.
 </p>
 
+<p>Heeft u minstens twee jaar internationale ervaring met het besturen van <strong>vrachtwagencombinaties</strong> en wilt u een nieuw leven in Canada? <a href="{{ site.baseurl }}/contact">Stuur dan uw CV of bel ons.</a></p>
+
 <p>Wilt u alleen op <a href="{{ site.baseurl }}/canada/vakantie">vakantie</a>? Dan heeft u een eTA (electronic Travel Authorization) nodig. Daarmee kunt u maximaal 6 maanden in Canada verblijven. Ook hiermee kunnen wij u helpen.
 </p>
 
